--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
     <div class="container">
         <!-- Main Buttons for Navigation -->
         <div class="main-buttons">
-            <button onclick="navigateTo('blind')" onclick="stopAudio()">For Blind Users</button>
-            <button onclick="navigateTo('mute')" onclick="stopAudio()">For Mute Users</button>
-            <button onclick="navigateTo('deaf')" onclick="stopAudio()">For Deaf Users</button>
+            <button onclick="navigateTo('blind'), stopAudio()">For Blind Users</button>
+            <button onclick="navigateTo('mute'), stopAudio()">For Mute Users</button>
+            <button onclick="navigateTo('deaf'), stopAudio()">For Deaf Users</button>
         </div>
 
         <!-- Blind Users Section -->
