--- a/index.html
+++ b/index.html
@@ -549,14 +549,13 @@ function stopSpeechToText() {
 
 
         
-<script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
-<df-messenger
-  chat-icon="https:&#x2F;&#x2F;image.similarpng.com&#x2F;very-thumbnail&#x2F;2021&#x2F;05&#x2F;Colorful-circle-logo-design-illustration-on-transparent-background-PNG.png"
-  chat-title="VitalAI"
-  agent-id="66defd9c-f98f-4d8d-999b-c167890813f2"
-  language-code="en"
-></df-messenger>
-</script>        
+    <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+    <df-messenger
+      chat-icon="https:&#x2F;&#x2F;encrypted-tbn0.gstatic.com&#x2F;images?q=tbn:ANd9GcT0cblfe_iPMtmlVmK2TSYhX8d_SWzjgvH9nw&amps"
+      chat-title="VitaAI"
+      agent-id="66defd9c-f98f-4d8d-999b-c167890813f2"
+      language-code="en"
+    ></df-messenger>
  
         
   
